syntax = "proto3";

package qtprotobufnamespace.wellknowntypes.tests;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message EmptyMessage {
    google.protobuf.Empty testField = 1;
}

message TimestampMessage {
    google.protobuf.Timestamp testField = 1;
}
